# cherry2

./: README.md
backend/: Cargo.toml  README.md
backend/migrations/: 20250113201657_create_cherry.sql
backend/src/: error.rs  main.rs  state.rs
backend/src/api/: mod.rs
backend/src/api/dtos/: mod.rs
backend/src/api/routes/: mod.rs
backend/src/coffee/: mod.rs
backend/src/db/: coffee.rs  experiments.rs  mod.rs  roasters.rs
backend/src/experiments/: mod.rs
backend/src/roaster/: mod.rs
backend/src/types/: coffee.rs  experiment.rs  mod.rs  roaster.rs
frontend/: .gitignore  gleam.toml  index.html  manifest.toml  tailwind.config.js
frontend/priv/static/: frontend.css  frontend.mjs
frontend/src/: frontend.gleam  model.gleam  msg.gleam  types.gleam
frontend/src/cherry/: api.gleam  dtos.gleam  model.gleam  msg.gleam  route.gleam  types.gleam
frontend/src/cherry/components/: spinner.gleam  table.gleam
frontend/src/cherry/views/: about.gleam  add_coffee.gleam  add_experiment.gleam  coffee_overview.gleam  coffees.gleam  experiments.gleam  not_found.gleam  profile.gleam  shared.gleam  sign_up.gleam  splash.gleam
frontend/src/components/: table.gleam
frontend/src/views/: about.gleam  coffees.gleam  experiments.gleam  shared.gleam  splash.gleam
