[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-cognito = { git = "https://github.com/RoamLabs/axum-cognito.git", tag = "0.2.0" }
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
http = "1.2.0"
serde = "1.0.217"
strum = { version = "0.27", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "uuid",
  "chrono",
  "macros",
  "migrate",
] }
thiserror = "2.0.12"
mimalloc = "0.1.43"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.12.0", features = ["v7", "serde"] }
